re PR middle-end/33273 (FAIL: 27_io/basic_istream/ignore/char/1.cc (test for excess errors))

PR middle-end/33273
	* expr.c (store_expr): Call adjust_address to change mode of dest_mem
	to BLKmode.

From-SVN: r128537